--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,9 @@
 spring.data.mongodb.uri=mongodb://localhost:27017/test
-
+server.port=80
 spring.thymeleaf.mode=HTML5
 spring.thymeleaf.encoding=UTF-8
 spring.thymeleaf.content-type=text/html
-spring.thymeleaf.cache=false
+spring.thymeleaf.cache=true
 spring.thymeleaf.prefix=/WEB-INF/templates/
 spring.thymeleaf.suffix=.html
+server.contextPath=/mobile
