即将添加QQ短信和通话记录通知.QQ通知部分来自https://github.com/Xianguang-Zhou/smartqq-client.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.data.mongodb.uri=mongodb://localhost:27017/test
-server.port=80
+server.port=8080
 spring.thymeleaf.mode=HTML5
 spring.thymeleaf.encoding=UTF-8
 spring.thymeleaf.content-type=text/html
@@ -7,3 +7,7 @@ spring.thymeleaf.cache=true
 spring.thymeleaf.prefix=/WEB-INF/templates/
 spring.thymeleaf.suffix=.html
 server.contextPath=/mobile
+spring.mail.host=smtp.163.com
+spring.mail.username=17194110228@163.com
+spring.mail.password=h378759617
+spring.mail.default-encoding=UTF-8
